margin nav fixed position

--- a/css/design.css
+++ b/css/design.css
@@ -4,16 +4,21 @@
   display: grid;
   /* flex-wrap: wrap; */
   grid-template-columns: repeat(auto-fill, 300px);
-  background-color: aqua;
+  background-color: white;
   width: 100%;
-
-  /*z-index: 5; /* always on the top*/
-
-  
+  z-index: 5;
+  position: sticky;
+  top: 0;
 }
-
+/*
+@@media (min-height:300px) {
+  nav {
+  position: sticky;
+  top: 0;
+  }
+}*/
 .navbar > div {
-  align-self: center; 
+  align-self: center;
   padding-left: 50px"
 }
 
@@ -21,4 +26,14 @@
   /* width: 100px; */
   height: 30px;
   padding: 3px;
+}
+
+.curr_video {
+  padding: 30px 10px 10px 70px;
+}
+
+.side_bar {
+    width: 100px;
+    padding: 30px 50px;
+    margin: 30px;
 }
