--- a/css/design.css
+++ b/css/design.css
@@ -1,39 +1,89 @@
 /**/
 
-.navbar {
+.container {
   display: grid;
-  /* flex-wrap: wrap; */
-  grid-template-columns: repeat(auto-fill, 300px);
-  background-color: white;
-  width: 100%;
-  z-index: 5;
-  position: sticky;
-  top: 0;
+
+  grid-template-areas:
+    "header header header"
+    "nav content side"
+    "footer footer footer";
+
+  grid-template-columns: 50px 1fr 300px;
+  grid-template-rows: auto 1fr auto;
+  grid-gap: 20px;
+  height: 100vh;
 }
-/*
-@@media (min-height:300px) {
-  nav {
-  position: sticky;
-  top: 0;
+
+@media (max-width: 768px) {
+  .container {
+    grid-template-areas:
+      "header"
+      "nav"
+      "content"
+      "side"
+      "footer";
+
+    grid-template-columns: 1fr;
+    grid-template-rows:
+      auto /* Header */
+      minmax(75px, auto) /* Nav */
+      1fr /* Content */
+      minmax(75px, auto) /* Sidebar */
+      auto; /* Footer */
   }
-}*/
-.navbar > div {
-  align-self: center;
-  padding-left: 50px"
+
+  nav,
+  aside {
+    margin: 0;
+  }
+}
+
+/* .navbar {
+  background-color: white;
+  z-index: 5;
+  
+} */
+
+header {
+  grid-area: header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .logo {
-  /* width: 100px; */
   height: 30px;
   padding: 3px;
 }
 
-.curr_video {
-  padding: 30px 10px 10px 70px;
+nav {
+  grid-area: nav;
+  /* margin-left: 0.5rem; */
 }
 
-.side_bar {
-    width: 100px;
-    padding: 30px 50px;
-    margin: 30px;
+main {
+  grid-area: content;
+}
+
+aside {
+  grid-area: side;
+  margin-left: 1 rem;
+  margin-right: 0.5 rem;
+}
+
+.curr_video {
+  /* padding: 30px 10px 10px 20px; */
+  width: 90%;
+}
+
+/* .side_bar {
+  width: 100px;
+  padding: 30px 50px;
+  margin: 30px;
+} */
+
+footer {
+  grid-area: footer;
 }
