--- a/css/design.css
+++ b/css/design.css
@@ -1,5 +1,3 @@
-
-
 .container {
   display: grid;
 
@@ -39,7 +37,7 @@
 }
 
 header {
-  top:0;
+  top: 0;
   width: 100%;
   position: sticky;
   background-color: white;
@@ -57,8 +55,19 @@ header {
 }
 
 .logo {
-  height: 30px;
+  height: 50px;
   padding: 3px;
+}
+
+.header {
+  border-radius: 20px;
+  width: 40px;
+}
+
+#author {
+  display: block;
+  font-size: 0.5rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
@@ -74,6 +83,14 @@ aside {
   grid-area: side;
   margin-left: 1 rem;
   margin-right: 0.5 rem;
+}
+
+aside img {
+  width: 150px;
+}
+aside p {
+  font-size: 0.5 rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .curr_video {
