--- a/css/design.css
+++ b/css/design.css
@@ -12,6 +12,7 @@
   height: 100vh;
 }
 
+
 @media (max-width: 768px) {
   .container {
     grid-template-areas:
@@ -70,6 +71,9 @@ header {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+li {
+  list-style: none;
+}
 nav {
   grid-area: nav;
   /* margin-left: 0.5rem; */
