--- a/css/design.css
+++ b/css/design.css
@@ -12,7 +12,6 @@
   height: 100vh;
 }
 
-
 @media (max-width: 768px) {
   .container {
     grid-template-areas:
@@ -44,7 +43,7 @@ header {
   background-color: white;
   overflow: hidden;
   z-index: 5;
-  height: 50px;
+  height: 30px;
 
   grid-area: header;
   display: flex;
@@ -52,7 +51,13 @@ header {
   align-items: center;
   padding-left: 1rem;
   padding-right: 1rem;
-  padding-top: 20px;
+  padding-top: 5px;
+}
+
+.search_input {
+  border: none;
+  padding: 6px;
+  font-size: 17px;
 }
 
 .logo {
@@ -89,9 +94,9 @@ aside {
   margin-right: 0.5 rem;
 }
 
-aside img {
+/* aside img {
   width: 150px;
-}
+} */
 aside p {
   font-size: 0.5 rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
