--- a/css/design.css
+++ b/css/design.css
@@ -6,10 +6,13 @@
     "nav content side"
     "footer footer footer";
 
-  grid-template-columns: 50px 1fr 300px;
+  grid-template-columns: 50px 1fr 450px;
   grid-template-rows: auto 1fr auto;
   grid-gap: 20px;
   height: 100vh;
+
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .icon {
   margin: 5px 20px;
@@ -82,6 +85,18 @@ header {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+#comment {
+  width: 100%;
+  align-items: center;
+}
+
+.icon-comment {
+  margin: 10px;
+}
+.comment-text {
+  margin: 0 50px 0 0;
+}
+
 li {
   list-style: none;
 }
@@ -108,13 +123,9 @@ aside p {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-.curr_video {
-  width: 90%;
-}
-
 .video_main {
-  width: 700px;
-  height: 480px;
+  width: 672px;
+  height: 378px;
 }
 
 /* .side_bar {
