--- a/css/design.css
+++ b/css/design.css
@@ -85,24 +85,31 @@ header {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#comment {
+#comment-input {
   width: 100%;
   align-items: center;
+}
+
+section {
+  display: block;
+}
+
+li {
+  list-style: none;
+  margin: 20px 0px;
+}
+
+.comment-user-photo {
+  width: 40px;
 }
 
 .icon-comment {
   margin: 10px;
 }
-.comment-text {
-  margin: 0 50px 0 0;
-}
 
-li {
-  list-style: none;
-}
-nav {
-  grid-area: nav;
-  /* margin-left: 0.5rem; */
+.comment-text {
+  padding:0px;
+  margin: 0px;
 }
 
 main {
@@ -115,9 +122,6 @@ aside {
   margin-right: 0.5 rem;
 }
 
-/* aside img {
-  width: 150px;
-} */
 aside p {
   font-size: 0.5 rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -127,12 +131,6 @@ aside p {
   width: 672px;
   height: 378px;
 }
-
-/* .side_bar {
-  width: 100px;
-  padding: 30px 50px;
-  margin: 30px;
-} */
 
 footer {
   grid-area: footer;
