--- a/css/design.css
+++ b/css/design.css
@@ -108,7 +108,7 @@ li {
 }
 
 .comment-text {
-  padding:0px;
+  padding: 0px;
   margin: 0px;
 }
 
@@ -123,13 +123,27 @@ aside {
 }
 
 aside p {
-  font-size: 0.5 rem;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 .video_main {
   width: 672px;
   height: 378px;
+}
+
+.recommand-video-image {
+  float: left;
+}
+
+.recommand-video-text {
+  float: right;
+}
+
+.recommand-video-text p {
+  font-size: 13px;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 
 footer {
