--- a/css/design.css
+++ b/css/design.css
@@ -80,24 +80,28 @@ header {
 }
 
 .author-containter {
-  display: grid;
-  grid-template-columns: 30px auto;
-  display: block;
+  display: inline-grid;
+  grid-template-columns: auto;
   font-size: 0.8rem;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .comment-image {
-  float: left;
 }
 
 .comment-text {
-  float: right;
 }
 
 #comment-input {
   width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
   align-items: center;
+}
+
+#comment-input :focus {
+  border: 3px solid #555;
 }
 
 section {
