--- a/css/design.css
+++ b/css/design.css
@@ -14,12 +14,6 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.icon {
-  margin: 5px 20px;
-}
-.icons {
-  margin: 30px;
-}
 
 @media (max-width: 768px) {
   .container {
@@ -56,31 +50,64 @@ header {
   padding-top: 5px;
 }
 
-.search_input {
+header .search_input {
   width: 400px;
   font-size: 120%;
   border: 1px solid #ccc;
 }
-.search_button {
+header .search_button {
   margin: 3px 5px;
 }
 
-.logo {
+header .logo {
   height: 50px;
   padding: 3px 40px 3px 10px;
   margin-left: 40px;
 }
 
-.header {
-  border-radius: 20px;
-  width: 40px;
+header .icons {
+  width: 280px;
 }
 
-.author-containter {
-  display: inline-grid;
-  grid-template-columns: auto;
+.user-photo {
+  width: 40px;
+}
+.icon {
+  margin: 5px 20px;
+}
+p {
+  margin:0;
+}
+
+.author {
+  display: grid;
+  grid-template-columns: auto 4fr 1fr;
   font-size: 0.8rem;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.author .image {
+  border: 3px blue solid;
+}
+
+.author .text {
+  border: 3px blue solid;
+}
+
+.author .subscribe {
+  border: 3px blue solid;
+}
+
+.comments_others .grid_2 {
+  display:grid;
+  grid-template-columns: auto 1fr;
+}
+.comments_others .grid_2 .image{
+  grid-row: 1/3;
+  border: 3px blue solid;
+}
+.comments_others .grid_2 .text{
+  border: 3px blue solid;
 }
 
 .icons_m {
@@ -116,9 +143,6 @@ li {
   margin: 20px 0px;
 }
 
-.comment-user-photo {
-  width: 40px;
-}
 
 .icon-comment {
   margin: 10px;
