--- a/css/design.css
+++ b/css/design.css
@@ -1,6 +1,8 @@
 .container {
   display: grid;
 
+  border: 2px blue solid;
+
   grid-template-areas:
     "header header header"
     "nav content side"
@@ -48,6 +50,7 @@ header {
   justify-content: space-between;
   align-items: center;
   padding-top: 5px;
+  border: 2px blue solid;
 }
 
 header .search_input {
@@ -56,27 +59,35 @@ header .search_input {
   border: 1px solid #ccc;
 }
 header .search_button {
-  margin: 3px 5px;
+  height: 8px;
+  width: 35px;
+  margin: 4px 5px;
+  font-size: 150%;
 }
 
 header .logo {
   height: 50px;
-  padding: 3px 40px 3px 10px;
-  margin-left: 40px;
+  padding: 3px 20px 3px 0px;
+  border: 2px blue solid;
 }
 
 header .icons {
-  width: 280px;
+  width: 330px;
 }
 
+header .menu-icon {
+  width: 10px !important;
+}
 .user-photo {
+  border-radius: 20px;
   width: 40px;
 }
 .icon {
-  margin: 5px 20px;
+  margin: 5px 18px;
+  border: 2px blue solid;
 }
 p {
-  margin:0;
+  margin: 0;
 }
 
 .author {
@@ -99,14 +110,14 @@ p {
 }
 
 .comments_others .grid_2 {
-  display:grid;
+  display: grid;
   grid-template-columns: auto 1fr;
 }
-.comments_others .grid_2 .image{
+.comments_others .grid_2 .image {
   grid-row: 1/3;
   border: 3px blue solid;
 }
-.comments_others .grid_2 .text{
+.comments_others .grid_2 .text {
   border: 3px blue solid;
 }
 
@@ -142,7 +153,6 @@ li {
   list-style: none;
   margin: 20px 0px;
 }
-
 
 .icon-comment {
   margin: 10px;
@@ -200,6 +210,59 @@ aside p {
   font-size: 13px;
   margin-top: 1px;
   margin-bottom: 1px;
+}
+
+.myButton {
+  -moz-box-shadow: inset -2px 1px 5px 0px #ffffff;
+  -webkit-box-shadow: inset -2px 1px 5px 0px #ffffff;
+  box-shadow: inset -2px 1px 5px 0px #ffffff;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #ffffff),
+    color-stop(1, #f6f6f6)
+  );
+  background: -moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+  background: -webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+  background: -o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+  background: -ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+  background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=0);
+  background-color: #ffffff;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #666666;
+  font-family: Arial;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 12px 33px;
+  text-decoration: none;
+  text-shadow: 0px 0px 0px #ffffff;
+}
+.myButton:hover {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0.05, #f6f6f6),
+    color-stop(1, #ffffff)
+  );
+  background: -moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+  background: -webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+  background: -o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+  background: -ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+  background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff',GradientType=0);
+  background-color: #f6f6f6;
+}
+.myButton:active {
+  position: relative;
+  top: 1px;
 }
 
 footer {
