--- a/css/design.css
+++ b/css/design.css
@@ -1,6 +1,6 @@
 .container {
   display: grid;
-  border: 2px blue solid;
+
   grid-template-areas:
     "header header header"
     "nav content side"
@@ -43,28 +43,22 @@ header {
   height: 40px;
 
   grid-area: header;
-  display: grid;/*flex
-  justify-content: space-between;
-  align-items: center;*/
+  display: grid;
   grid-template-columns: 35px 150px 650px 430px;
   padding-top: 5px;
-  border: 2px blue solid;
 }
 
 header .menu {
   padding: 5px;
-  border: 2px blue solid;
 }
 
 header .logo {
   height: 20px;
   padding: 2px 5px;
-  border: 2px blue solid;
 }
 header .search_box {
   width: auto;
   align: center;
-  border: 2px blue solid;
 }
 header .search_input {
   width: 550px;
@@ -83,7 +77,6 @@ header .search_button {
 
 header .icons {
   width: 330px;
-  border: 2px blue solid;
 }
 
 .user-photo {
@@ -92,7 +85,6 @@ header .icons {
 }
 .icon {
   margin: 5px 18px;
-  border: 2px blue solid;
 }
 p {
   margin: 0;
@@ -105,31 +97,26 @@ p {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.author .image {
-  border: 3px blue solid;
-}
-
-.author .text {
-  border: 3px blue solid;
-}
-
-.author .subscribe {
-  border: 3px blue solid;
-}
 .grid_2 {
   display: grid;
   grid-template-columns: auto 1fr;
 }
+
+.comments_others .text span {
+  font-size: 14px;
+  font-weight: 500;
+  padding-bottom: 15px !important;
+}
+
+.comments_others .text {
+  padding-left: 15px;
+}
+
 .comments_others .grid_2 {
-  display: grid;
-  grid-template-columns: auto 1fr;
+  margin: 10px;
 }
 .comments_others .grid_2 .image {
   grid-row: 1/3;
-  border: 3px blue solid;
-}
-.comments_others .grid_2 .text {
-  border: 3px blue solid;
 }
 
 .icons_m {
@@ -200,30 +187,12 @@ aside p {
 
 .recommand {
   display: grid;
-  /*grid-template-columns: auto;
-  grid-template-rows: auto;*/
-}
-
-/*
-.recommand  {
-  display: grid;
-  grid-template-columns: auto auto;
-  padding: 20px;
-  border: 2px blue solid;
-}*/
-.recommand .grid_2
-.recommand .grid_2 .image {
-  /*float: left;*/
-  wid
-  border: 2px blue solid;
 }
 
 .recommand .grid_2 .text {
-  /*margin-left: 5px;*/
+  font-size: 14px;
   width: 230px;
   height: 96px;
-  /*float: right;*/
-  border: 2px blue solid;
 }
 
 .recommand-video-text p {
@@ -283,6 +252,10 @@ aside p {
 .myButton:active {
   position: relative;
   top: 1px;
+}
+
+hr {
+  border: 0.2px rgb(196, 192, 192) solid;
 }
 
 footer {
