--- a/css/design.css
+++ b/css/design.css
@@ -78,13 +78,17 @@ header .search_button {
 header .icons {
   width: 330px;
 }
+header .icons .icon {
+  margin: 5px 18px;
+}
 
+.icon {
+  width: 15px;
+  height: 15px;
+}
 .user-photo {
   border-radius: 20px;
   width: 40px;
-}
-.icon {
-  margin: 5px 18px;
 }
 p {
   margin: 0;
@@ -93,6 +97,7 @@ p {
 .author {
   display: grid;
   grid-template-columns: auto 4fr 1fr;
+  grid-column-gap: 15px;
   font-size: 0.8rem;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -100,16 +105,37 @@ p {
 .grid_2 {
   display: grid;
   grid-template-columns: auto 1fr;
+  grid-column-gap: 15px;
+}
+
+.curr_coment {
+  width: 100%;
+  height: 100px;
+/*  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-row: auto auto;*/
+}
+
+.curr_coment input {
+  width: 90%;
+  padding: 6px 20px;
+  border: 1px solid #ccc;
+  align-items: center;
+  font-size: 120%;
+}
+
+.curr_coment input:focus {
+  border: 3px solid #555;
+}
+
+.curr_coment button {
+  float: right;
 }
 
 .comments_others .text span {
   font-size: 14px;
   font-weight: 500;
   padding-bottom: 15px !important;
-}
-
-.comments_others .text {
-  padding-left: 15px;
 }
 
 .comments_others .grid_2 {
@@ -119,46 +145,17 @@ p {
   grid-row: 1/3;
 }
 
-.icons_m {
-  padding-left: 100px;
-  width: 300px;
+.view .subletter .icons {
+  float: right;
+  width: auto;
 }
 
-.icon_m {
+.view .subletter .icons .icon {
   margin: auto 10px;
-  width: 40px;
-  heigh: 40px;
-}
-
-.input {
-  width: 90%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  border: 1px solid #ccc;
-  align-items: center;
-  font-size: 120%;
-}
-
-#comment-input :focus {
-  border: 3px solid #555;
-}
-
-section {
-  display: block;
-}
-
-li {
-  list-style: none;
-  margin: 20px 0px;
 }
 
 .icon-comment {
   margin: 10px;
-}
-
-.comment-text {
-  padding: 0px;
-  margin: 0px;
 }
 
 main {
